[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["Andrei Toroplean <60916097+AndreiToroplean@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
debugpy = "^1.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
