[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["Andrei Toroplean <60916097+AndreiToroplean@users.noreply.github.com>"]
repository = "https://github.com/AndreiToroplean/core"
readme = "README.md"
packages = [ { include = "core" } ]

[tool.poetry.dependencies]
python = "^3.10"
debugpy = "^1.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
